--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 	<h1>hello js rocket</h1>
-	<a href="#" onclick="sayMyName('Rich');">Click Me</a>
+	<a href="#" onclick="doCoolStuff();">Click Me</a>
+
+	<div class="cool" id="cool">
+		<p>Hello I'm cool!</p>
+	</div>
 </body>
 </html>
